--- a/src/components/About.css
+++ b/src/components/About.css
@@ -23,8 +23,8 @@
   height: calc(100vh - 80px);
   background-color: whitesmoke;
   display: flex;
-  padding-left: 80px;
-  padding-top: 50px;
+  /* padding-left: 80px; */
+  padding-top: 110px;
 }
 
 .Aboutleft {
@@ -34,7 +34,7 @@
 
 .Aboutright {
   width: 825px;
-  margin-right: 80px;
+  margin-right: 150px;
 }
 
 .parent {
@@ -43,7 +43,7 @@
 
 .subdiv {
   display: flex;
-  margin-top: 20px;
+  margin-top: 2px;
   margin-right: 30px;
 }
 
